# Advent-of-Code-2021

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  new_day.sh
.github/workflows/: cmake.yml
week_1/day_1/: README.md  day_1.cpp
week_1/day_2/: README.md  day_2.cpp
week_1/day_3/: README.md  day_3.cpp
week_1/day_4/: README.md  day_4.cpp
week_1/day_5/: README.md  day_5.cpp
week_1/day_6/: README.md  day_6.cpp  day_6_old.cpp  day_6_v2.cpp
week_1/day_7/: README.md  day_7.cpp
week_2/day_10/: day_10.cpp
week_2/day_11/: day_11.cpp
week_2/day_12/: day_12.cpp
week_2/day_13/: README.md  day_13.cpp  day_13_alt_part_2.cpp  dots
week_2/day_14/: day_14.cpp
week_2/day_8/: README.md  day_8.cpp  day_8_old.cpp  day_8_v2.cpp
week_2/day_9/: README.md  day_9.cpp
week_3/day_15/: day_15.cpp
week_3/day_16/: README.md  day_16.cpp
week_3/day_17/: README.md  day_17.cpp
week_3/day_18/: README.md  day_18.cpp
week_3/day_19/: README.md  day_19.cpp
week_3/day_20/: day_20.cpp
week_3/day_21/: day_21.cpp
week_4/day_22/: README.md  day_22.cpp  day_22_old.cpp
week_4/day_23/: README.md  day_23.cpp  day_23_v2.cpp
week_4/day_24/: README.md  day_24.cpp
week_4/day_25/: day_25.cpp
